tests/analyze/try-mixed-carriers/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `option 't31`, but found `result 't30 't29`.
> 16 | 	try first = safe-head ids  # option int — wrong carrier
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type mismatch: expected `result 't34 string`, but found `option 't31`.
> 15 | 	try ids = lookup id     # result (list int) string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

